--- a/.github/workflows/compile-and-test-gnu.yml
+++ b/.github/workflows/compile-and-test-gnu.yml
@@ -16,7 +16,7 @@ jobs:
             sudo apt-get install -y build-essential &&
             sudo apt-get install -y libomp-dev
         - name: compile pato
-          run: make BUILD=serial LDLIBS="-lrt" -j 4 && make BUILD=release LDLIBS="-lrt" -j 4
+          run: make BUILD=serial -j4 && make BUILD=release -j4
           working-directory: ${{ github.workspace }}
         - name: run tests
           run: bash test.bash
