--- a/.github/workflows/compile-and-test-clang.yml
+++ b/.github/workflows/compile-and-test-clang.yml
@@ -2,8 +2,20 @@ name: compile and test clang
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'src/**'
+      - 'test/**'
+      - 'include/**'
+      - 'makefiles/Makefile.clang'
+      - '.github/workflows/compile-and-test-clang.yml'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'src/**'
+      - 'test/**'
+      - 'include/**'
+      - 'makefiles/Makefile.clang'
+      - '.github/workflows/compile-and-test-clang.yml'
 jobs:
   ubuntu:
     runs-on: ubuntu-latest
